# arDEWino

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: go-ci.yml  go-lint.yml  go-test.yml  golangci-lint.yml  rust-ci.yml  rust-clippy-lint.yml
arduino-sketches/: dewpoint_usb.ino
arduino-sketches/dewpoint_usb/: dewpoint_usb.ino
arduino/sketches/: nano_esp32_usb_wifi.ino  nano_usb_old_2.ino
cpp/arDEWino-cpp/: CMakeLists.txt
cpp/arDEWino-cpp/src/: main.cpp
cpp/arDEWino-cpp/src/RestApiHandler/: RestApiHandler.cpp
cpp/arDEWino-cpp/src/Utils/: Utils.cpp  Utils.h
db/clickhouse/: schema.sql
db/timescaledb/: schema.sql
docker/: compose.yml
docker/ardewino-rs/: Dockerfile.ardewino-rs
docker/clickhouse/: Dockerfile  Dockerfile.clickhouse  commands.txt  init.sql
docker/dewdrop-go/: Dockerfile.dewdrop-go
docker/go-dew/: Dockerfile.go-dew
docker/grafana/: compose.yml
docker/timescale/: init.sql
go/dewdrop-go/: .gitignore  go.mod  go.sum
go/dewdrop-go/cmd/dewdrop/: main.go
go/dewdrop-go/internal/requests/: http_requests.go  http_requests_test.go
go/dewdrop-go/internal/usb/: usb.go  (+1 more)
go/go-dew/: .gitignore  .mockery.yaml  go.mod  go.sum
python/dew-serve/: .gitignore
rust/arDEWino-rs/: Cargo.toml  run_with_interval.sh
rust/arDEWino-rs/src/: calculations.rs  http_requests.rs  main.rs  models.rs  usb.rs  wifi.rs
src/: main.cpp
src/RestApiHandler/: RestApiHandler.cpp  RestApiHandler.h
src/UsbCommunication/: UsbCommunication.cpp  UsbCommunication.h
src/WeatherApi/: WeatherApi.cpp  WeatherApi.h
(+29 files in other folders)
