cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_TOOLCHAIN_FILE "~/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(arDEWino)
include_directories(include)
file(GLOB SOURCES "src/*.cpp" "src/*/*.cpp")
add_executable(arDEWino ${SOURCES})
find_package(CURL REQUIRED)
target_link_libraries(arDEWino PRIVATE CURL::libcurl)
