[package]
name = "arDEWino-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.6.0"
tokio-serial = "5.4.4"  # Check for the latest version
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
clap = { version = "4", features = ["derive"] }